--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,7 @@ article img{
 article:after, article img:after {
   content: "";
   display: table;
+  clear: both;
 }
 .kids-p {
   margin-top: 2rem;
