--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,7 @@ form p {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
+  text-shadow: 1px 1px 1px #9589cc;
 }
 .cats-div {
   flex: 0 0 90%;
@@ -226,6 +227,7 @@ only screen and (max-width: 900px), (min-device-width: 768px) and (max-device-wi
 .kids-p {
   margin-top: 2rem;
   text-align: center;
+  font-size: 1.2rem;
 }
 .kids-div{
   display: flex;
