--- a/css/mole-style.css
+++ b/css/mole-style.css
@@ -9,14 +9,10 @@ html {
 }
 
 body {
-  /*padding: 0;
-  margin: 0;*/
   cursor: url(../img/cursor.png), default;
-  /*background-color: #c0c86d;*/
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
-  /*align-items: center;*/
 }
 
 header {
@@ -28,12 +24,10 @@ header {
   margin: 0 auto;
 }
 
-section,
-.bg {
+section {
   background-image: url(../img/background.png);
   background-repeat: no-repeat;
   width: 100%;
-  flex: 0 0 100%;
   height: 100%;
   display: flex;
   flex-wrap: wrap;
